LIST OF CHANGES
---------------

release 6.1
 -  update definition of iseq_external_product_metric table

release 6.0
 - add new tables for externally processed data

releaes 5.1
 - allow to store longer composition JSON strings in the iseq_product_metrics
   table

release 5.0
 - added target autosome fields to iseq_product_metrics
 - added DBIx binding for the bmap_flowcell table for the
   BioNano Saphyr instrument

release 4.0
 - iseq_product_metrics table: make id_iseq_product column not nullable,
     set unique constraint on it
 - a new table iseq_product_components - linking table for product records
     in iseq_product_metrics

release 3.1
 - add column 'nrd_percent' for non-reference discordance to the
    'iseq_product_metrics' table

release 3.0
 - 'last_changed' columns added to both 'iseq_product_metrics' and
   'iseq_run_lane_metrics' tables
 - 'workflow_type' and 'instrument_side' columns added to the
   'iseq_run_lane_metrics' table
 - 'qc_seq' column addedto the 'iseq_run_lane_metrics' table
 - redundant 'iseq_pm_run_index' indexed dropped from 'iseq_product_metrics'
   table
 - changes to enable saving results for merged entities to'iseq_product_metrics':
     NOT NULL constraint dropped from 'id_run' and 'position' columns;
     nullable 'id_iseq_product' column added to save composition digest;
     nullable 'iseq_composition_tmp' added to save a short form of composition
     JSON, needed because we do not have the linking table yet

release 2.11
 - added metric column to iseq_product_metrics for RNA: MT expression in pct of TPM.
 - add target fields to iseq_product_metrics

release 2.10
 - added metrics columns to iseq_product_metrics for GbS

release 2.9
 - added metrics columns to iseq_product_metrics (for RNA)
 - superfluous database indexes dropped
 - DBIx schema update for primer_panel
 - added columns tag_hops_percent and tag_hops_power to iseq_run_lane_metrics table

release 2.8